--- a/src/components/skillsCategory/skillsCategoryCard.css
+++ b/src/components/skillsCategory/skillsCategoryCard.css
@@ -13,7 +13,7 @@
 #skills-cards-div {
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(360px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
   gap: 20px;
   justify-items: center;
 }
